<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:layout_margin="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/main_textView_test1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="@drawable/side_menu_extend_bg"
                android:drawableLeft="@drawable/function_menu_left"
                android:gravity="center_vertical"
                android:text="@string/frame_main_school_map"
                android:textAppearance="?android:attr/textAppearance"
                android:textColor="#ffffff" />

            <ImageView
                android:id="@+id/map_imageBtn"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_margin="2dp"
                android:scaleType="fitXY"
                android:background="@drawable/ic_bg"
                android:src="@drawable/ic_map" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="@drawable/side_menu_extend_bg"
                android:drawableLeft="@drawable/function_menu_left"
                android:gravity="center_vertical"
                android:text="@string/frame_main_bus_track"
                android:textAppearance="?android:attr/textAppearance"
                android:textColor="#ffffff" />

            <ImageView
                android:id="@+id/goout_imageBtn"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_margin="2dp"
                android:scaleType="fitXY"
                android:src="@drawable/function_menu_goout" />

        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="@drawable/side_menu_extend_bg"
                android:drawableLeft="@drawable/function_menu_left"
                android:gravity="center_vertical"
                android:text="@string/frame_main_common_phone"
                android:textAppearance="?android:attr/textAppearance"
                android:textColor="#ffffff" />

            <ImageView
                android:id="@+id/phone_imageBtn"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_margin="2dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_phone_4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="@drawable/side_menu_extend_bg"
                android:drawableLeft="@drawable/function_menu_left"
                android:gravity="center_vertical"
                 android:text="@string/frame_main_news_and_noticle"
                android:textAppearance="?android:attr/textAppearance"
                android:textColor="#ffffff" />

            <ImageView
                android:id="@+id/news_and_noticle_imageBtn"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_margin="2dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_news" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/side_menu_extend_bg"
            android:drawableLeft="@drawable/function_menu_left"
            android:gravity="center_vertical"
             android:text="@string/frame_main_school_landscape"
            android:textAppearance="?android:attr/textAppearance"
            android:textColor="#ffffff" />

        <ImageView
            android:id="@+id/campus_imageBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:scaleType="fitXY"
            android:src="@drawable/s5" />
    </LinearLayout>

</LinearLayout>
</ScrollView>