<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:shrinkColumns="*"
                android:stretchColumns="*" >

                <TableRow
                    android:id="@+id/main_tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_white_box"
                        android:orientation="vertical"
                        android:padding="2dp" >

                        <TextView
                            android:id="@+id/main_textView3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:background="@drawable/side_menu_extend_bg"
                            android:drawableLeft="@drawable/function_menu_left"
                            android:gravity="center_vertical"
                            android:text="@string/frame_main_school_map"
                            android:textAppearance="?android:attr/textAppearance"
                            android:textColor="#ffffff" />

                        <ImageButton
                            android:id="@+id/map_imageBtn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.83"
                            android:scaleType="fitXY"
                            android:src="@drawable/function_menu_jxau_map" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_white_box"
                        android:orientation="vertical"
                        android:padding="2dp" >

                        <TextView
                            android:id="@+id/main_textView4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:background="@drawable/side_menu_extend_bg"
                            android:drawableLeft="@drawable/function_menu_left"
                            android:gravity="center_vertical"
                            android:text="@string/frame_main_bus_track"
                            android:textAppearance="?android:attr/textAppearance"
                            android:textColor="#ffffff" />

                        <ImageButton
                            android:id="@+id/goout_imageBtn"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.83"
                            android:scaleType="fitXY"
                            android:src="@drawable/function_menu_goout" />
                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_white_box"
                        android:orientation="vertical"
                        android:padding="2dp" >

                        <TextView
                            android:id="@+id/main_textView5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:background="@drawable/side_menu_extend_bg"
                            android:drawableLeft="@drawable/function_menu_left"
                            android:gravity="center_vertical"
                            android:text="@string/frame_main_common_phone"
                            android:textAppearance="?android:attr/textAppearance"
                            android:textColor="#ffffff" />

                        <ImageButton
                            android:id="@+id/phone_imageBtn"
                            android:layout_width="150dp"
                            android:layout_height="100dp"
                            android:layout_weight="0.83"
                            android:src="@drawable/ic_menu_call" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_white_box"
                        android:orientation="vertical"
                        android:padding="2dp" >

                        <TextView
                            android:id="@+id/main_textView6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:background="@drawable/side_menu_extend_bg"
                            android:drawableLeft="@drawable/function_menu_left"
                            android:gravity="center_vertical"
                            android:text="@string/frame_main_news_and_noticle"
                            android:textAppearance="?android:attr/textAppearance"
                            android:textColor="#ffffff" />

                        <ImageButton
                            android:id="@+id/news_and_noticle_imageBtn"
                            android:layout_width="150dp"
                            android:layout_height="100dp"
                            android:layout_weight="0.83"
                            android:src="@drawable/ic_menu_call" />
                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_white_box"
                        android:orientation="vertical"
                        android:padding="2dp" >

                        <TextView
                            android:id="@+id/main_textView7"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:background="@drawable/side_menu_extend_bg"
                            android:drawableLeft="@drawable/function_menu_left"
                            android:gravity="center_vertical"
                            android:text="@string/frame_main_school_landscape"
                            android:textAppearance="?android:attr/textAppearance"
                            android:textColor="#ffffff" />

                        <ImageButton
                            android:id="@+id/campus_imageBtn"
                            android:layout_width="150dp"
                            android:layout_height="100dp"
                            android:layout_weight="0.83"
                            android:src="@drawable/ic_menu_call" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_white_box"
                        android:orientation="vertical"
                        android:padding="2dp" >

                        <TextView
                            android:id="@+id/main_textView8"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:background="@drawable/side_menu_extend_bg"
                            android:drawableLeft="@drawable/function_menu_left"
                            android:gravity="center_vertical"
                            android:text="@string/frame_main_school_news"
                            android:textAppearance="?android:attr/textAppearance"
                            android:textColor="#ffffff" />

                        <ImageButton
                            android:id="@+id/main_imageView7"
                            android:layout_width="150dp"
                            android:layout_height="100dp"
                            android:layout_weight="0.83"
                            android:src="@drawable/ic_menu_call" />
                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_white_box"
                        android:orientation="vertical"
                        android:padding="2dp" >

                        <TextView
                            android:id="@+id/main_textView9"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:background="@drawable/side_menu_extend_bg"
                            android:drawableLeft="@drawable/function_menu_left"
                            android:gravity="center_vertical"
                            android:text="@string/frame_main_electricity_query"
                            android:textAppearance="?android:attr/textAppearance"
                            android:textColor="#ffffff" />

                        <ImageButton
                            android:id="@+id/main_imageView8"
                            android:layout_width="150dp"
                            android:layout_height="100dp"
                            android:layout_weight="0.83"
                            android:src="@drawable/ic_menu_call" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_white_box"
                        android:orientation="vertical"
                        android:padding="2dp" >

                        <TextView
                            android:id="@+id/main_textView10"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:background="@drawable/side_menu_extend_bg"
                            android:drawableLeft="@drawable/function_menu_left"
                            android:gravity="center_vertical"
                            android:text="@string/frame_main_educational_admin_assist"
                            android:textAppearance="?android:attr/textAppearance"
                            android:textColor="#ffffff" />

                        <ImageButton
                            android:id="@+id/main_imageView9"
                            android:layout_width="150dp"
                            android:layout_height="100dp"
                            android:layout_weight="0.83"
                            android:src="@drawable/ic_menu_call" />
                    </LinearLayout>
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>